samples/_failures_safe/1761142493_947343_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03f0f1c4.c:187: error: expected ‘;’, ‘,’ or ‘)’ at end of input
